[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smfsb"
version = "1.1.3"
authors = [
  { name="Darren Wilkinson", email="darrenjwilkinson@btinternet.com" },
]
description = "Python code relating to the textbook, Stochastic modelling for systems biology, third edition"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "sbmlsh",
  "numpy>=2",
  "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/darrenjw/python-smfsb"
Documentation = "https://python-smfsb.readthedocs.io/"
Issues = "https://github.com/darrenjw/python-smfsb/issues"

